редактирование работ + отображение доп. информации о проекте

--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -36,6 +36,13 @@
             });
         });
 
+        $(document).ready(function () {
+            $(".editBtn").click(function () {
+                updatedBlock = $(this).attr("data-ajax-update");
+                $(updatedBlock).toggle("fast");
+            });
+        });
+
         $(".deleteBtn").on("click", function (e) {
             e.preventDefault();
             $("<div></div>")
