--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -4,8 +4,8 @@
         <div class="col-md-2">Пользователь</div>
         <div class="col-md-2">Комментарий</div>
         <div class="col-md-1">Количество</div>
-        <div class="col-md-2">Дата назначения</div>
-        <div class="col-md-2">Дата загрузки</div>
+        <div class="col-md-2">Назначено</div>
+        <div class="col-md-2">Загружено</div>
         <div class="col-md-3">Команды</div>
     </div>
 
