--- a/TranslationReg/Views/Projects/DetailsShort.cshtml
+++ b/TranslationReg/Views/Projects/DetailsShort.cshtml
@@ -4,30 +4,20 @@
     <div>
         <dl class="dl-horizontal">
 
-            <dt>
-                @Html.LabelFor(model => model.LanguagePair.Name, "Языковая пара")
-            </dt>
+            <dt>@Html.LabelFor(model => model.LanguagePair.Name, "Языковая пара")</dt>
+            <dd>@Html.DisplayFor(model => model.LanguagePair.Name)</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.LanguagePair.Name)
-            </dd>
+            <dt>@Html.LabelFor(model => model.Customer, "Заказчик")</dt>
+            <dd>@Html.DisplayFor(model => model.Customer)</dd>
 
-            <dt>
-                @Html.LabelFor(model => model.Customer, "Заказчик")
-            </dt>
+            <dt>@Html.LabelFor(model => model.Creator.Name, "Создатель")</dt>
+            <dd>@Html.DisplayFor(model => model.Creator.Name)</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Customer)
-            </dd>
+            <dt>@Html.LabelFor(model => model.Date, "Дата создания")</dt>
+            <dd>@Model.Date.ToString("dd/MM/yyyy")</dd>
 
-            <dt>
-                @Html.LabelFor(model => model.Creator.Name, "Создатель")
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Creator.Name)
-            </dd>
-
+            <dt>@Html.LabelFor(model => model.ProjectStatus.Name, "Статус")</dt>
+            <dd>@Html.DisplayFor(model => model.ProjectStatus.Name)</dd>
         </dl>
     </div>
 </div>
