--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -32,13 +32,16 @@
         </div>
         <div class="col-md-3">
             <div class="buttons-container">
+                <a class="btn btn-primary editBtn" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#userStage@(Model.Id)"
+                   href="/User_Stage/Edit/@Model.Id">Редактировать</a>
                 @if (Model.DocFile != null && !String.IsNullOrWhiteSpace(Model.DocFile.Path))
                 {
                     @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-primary" })
+                    <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Финализировать</a>
                 }
-                <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Отметить финальным</a>
                 <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
             </div>
         </div>
     </div>
 </div>
+<div id="userStage@(Model.Id)" class="dynamicBlock dynamicItem"></div>
