создание статусов проекта

--- a/TranslationReg/Views/WorkTypes/Index.cshtml
+++ b/TranslationReg/Views/WorkTypes/Index.cshtml
@@ -2,6 +2,7 @@
 
 @Html.Partial("../WorkTypes/List", Model.workTypes)
 @Html.Partial("../UnitOfMeasure/List", Model.unitsOfMeasure)
+@Html.Partial("../ProjectStatuse/List", Model.projectStatuses)
 
 @section scripts {
     <script>
