--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -2,9 +2,7 @@
 
 <div>
     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocumentForm"
-       href="/Documents/CreateProjectDoc/@Model.Id" class="btn btn-primary createBtn" role="button">
-        Добавить
-    </a>
+       href="/Documents/CreateProjectDoc/@Model.Id" class="btn btn-primary createBtn">Добавить</a>
     <div id="addDocumentForm" class="dynamicBlock"></div>
 
     <div class="">
@@ -21,7 +19,6 @@
                 </div>
                 <div class="col-md-2">
                     <span>
-
                         @doc.Owner.Name
                     </span>
                 </div>
