--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand"></a>
             </div>
@@ -29,6 +30,7 @@
                     <li>@Html.ActionLink("Документы", "Index", "Documents")</li>
                     <li>@Html.ActionLink("Языки", "Index", "Languages")</li>
                     <li>@Html.ActionLink("Типы работ", "Index", "WorkTypes")</li>
+                    <li>@Html.ActionLink("Отчеты", "Index", "Analytics")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
