--- a/TranslationReg/Views/Analytics/Filters.cshtml
+++ b/TranslationReg/Views/Analytics/Filters.cshtml
@@ -1,52 +1,52 @@
-﻿@model TranslationReg.Models.AnaliticsFiltersModel
+﻿@model TranslationReg.Models.ReportModel
 <div class="formContainer">
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("FormReport", "Analytics", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+        <div class="form-horizontal">
 
-        <div class="form-group">
-            @Html.Label("Дата от", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.periodFrom)
+            <div class="form-group">
+                @Html.Label("Дата от", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom">
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.Label("Дата до", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input type="date" name="filters.PeriodTo" value="@Model.DateTo">
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.Label("Проект", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.Label("Работник", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("filters.userId", Model.UserList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.Label("Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("filters.workTypeId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Сформировать отчет" class="btn btn-default" />
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.Label("Дата до", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.periodTo)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Работник", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserId", Model.UserList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сформировать отчет" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
     }
 </div>
 
