--- a/TranslationReg/Views/Analytics/Report.cshtml
+++ b/TranslationReg/Views/Analytics/Report.cshtml
@@ -2,76 +2,24 @@
 
 
 <h2>Выберите необходимые фильтры</h2>
-<div class="formContainer">
-    @using (Html.BeginForm("FormReport", "Analytics", FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
+@Html.Partial("..//Analytics//Filters", Model)
 
-    <div class="form-horizontal">
-
-        <div class="form-group">
-            @Html.Label("За все время", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.CheckBox("filters.ForAllTime")
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Дата от", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom" id="dateFrom">
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Дата до", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="date" name="filters.PeriodTo" value="@Model.DateTo" id="dateTo">
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Проект", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("filters.projectId", Model.ProjectList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Работник", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("filters.userId", Model.UserList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("filters.workTypeId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сформировать отчет" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-    }
-</div>
-
-@if (Model.FilteredWorks != null && Model.FilteredWorks.Count != 0)
+@if (Model.ReportSections != null && Model.ReportSections.Count != 0)
 {
     <h2>Отчет по фильтрам</h2>
     <div id="report">
-        @foreach (var work in Model.FilteredWorks)
+        @foreach (var userWorks in Model.ReportSections)
         {
-            <div>
-                @work.User.Name
-            </div>
-            <div>
-                @work.Amount
-            </div>
+            <div>Пользователь @userWorks.First().First().User.Name</div>
+            foreach (var typedWorks in userWorks)
+            {
+                <div>Тип работ @typedWorks.First().Stage.WorkType.Name</div>
+                foreach (var work in typedWorks)
+                {
+                    <div>@work.Amount</div>
+                }
+                <div>Сумма: @typedWorks.Sum(x => x.Amount)</div>
+            }
         }
     </div>
 }
