--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -2,10 +2,8 @@
 
 <h2>Языковые пары</h2>
 
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm"
-   href="/LanguagePairs/Create" class="btn btn-primary createBtn" role="button">
-    Добавить
-</a>
+<a data-ajax-update="#addLanguagePairForm" data-href="/LanguagePairs/Create" class="btn btn-primary ajaxToggleBtn" role="button">
+    Добавить</a>
 <div id="addLanguagePairForm" class="dynamicBlock"></div>
 
 <div>
@@ -38,8 +36,8 @@
             </div>
             <div class="col-md-4">
                 <div class="buttons-container">
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
-                       href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
+                    <a data-ajax-update="#languagePair@(item.Id)" data-href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary ajaxToggleBtn">
+                        Редактировать</a>
                     <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
                        href="/LanguagePairs/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
                 </div>
