--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -33,8 +33,7 @@
     </div>
 </div>
 
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addProj"
-   href="/Projects/Create" class="btn btn-primary createBtn">Добавить</a>
+<a data-ajax-update="#addProj" data-href="/Projects/Create" class="btn btn-primary ajaxToggleBtn">Добавить</a>
 <div id="addProj" class="dynamicBlock"></div>
 
 <div id="projectList">
