--- a/TranslationReg/Views/Documents/Item.cshtml
+++ b/TranslationReg/Views/Documents/Item.cshtml
@@ -7,8 +7,7 @@
         @Html.ActionLink("Скачать", "Download", "Modeluments", new { @filepath = Model.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-success" })
         <a class="btn btn-primary" href="/Modeluments/Edit/@Model.Id">Редактировать</a>
         <a class="btn btn-danger deleteBtn" href="/Modeluments/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
-        <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addModelStageForm@(Model.Id)"
-           href="/ModelStages/Create/@Model.Id" class="btn btn-success createBtn">Добавить стадию</a>
+        <a data-ajax-update="#addModelStageForm@(Model.Id)" data-href="/ModelStages/Create/@Model.Id" class="btn btn-success ajaxToggleBtn">Добавить стадию</a>
     </div>
     <div id="addModelStageForm@(Model.Id)" class="dynamicBlock"></div>
 </div>
